--- a/TurnBasedRPG/Doodles/Doodle.xib
+++ b/TurnBasedRPG/Doodles/Doodle.xib
@@ -16,14 +16,21 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="CnA-OC-qt6" customClass="Eye" customModule="TurnBasedRPG" customModuleProvider="target">
-                    <rect key="frame" x="46" y="195" width="138" height="69"/>
+                <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="6KX-0W-x0n" customClass="FaceView" customModule="TurnBasedRPG" customModuleProvider="target">
+                    <rect key="frame" x="32" y="75" width="300" height="300"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                </view>
-                <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="6RQ-kj-SFh" customClass="Eye" customModule="TurnBasedRPG" customModuleProvider="target">
-                    <rect key="frame" x="192" y="195" width="138" height="69"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <subviews>
+                        <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="6RQ-kj-SFh" customClass="Eye" customModule="TurnBasedRPG" customModuleProvider="target">
+                            <rect key="frame" x="162" y="115" width="125" height="65"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        </view>
+                        <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="CnA-OC-qt6" customClass="Eye" customModule="TurnBasedRPG" customModuleProvider="target">
+                            <rect key="frame" x="12" y="115" width="125" height="65"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        </view>
+                    </subviews>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 </view>
             </subviews>
